# ShuffleNet_and_EfficientNet

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ConvLayer.h  DataLoader.h  Dataset.h  EfficientNetLayer.h  FullyConnectedLayer.h  Layer.h  LossFunc.h  Model.h  Optimizer.h  PoolingLayer.h  ShuffleNetUnitLayer.h  Tensor.h
src/: ConvLayer.cpp  DataLoader.cpp  Dataset.cpp  FullyConnectedLayer.cpp  Layer.cpp  LossFunc.cpp  Model.cpp  Optimizer.cpp  PoolingLayer.cpp  Tensor.cpp
